fix: disable double tap zoom on iOS
closes: #1

--- a/src/app.css
+++ b/src/app.css
@@ -54,6 +54,7 @@
 	}
 	body {
 		@apply bg-background text-foreground;
+		touch-action: manipulation;
 	}
 }
 
